# EMSegment3

./: CMakeLists.txt  README  vtkEMSegmentLogic.cxx  vtkEMSegmentMRMLManager.cxx  vtkEMSegmentMRMLManager.h  vtkEMSegmentWin32Header.h
Algorithm/: EMLocalAlgorithm.txx  EMLocalAlgorithm_Initialization.txx  itkEMLocalOptimization.h  vtkDataDef.h  vtkFileOps.h  vtkImageEMAtlasClass.h  vtkImageEMGeneral.cxx  vtkImageEMGeneral.h  vtkImageEMLocalSuperClass.h
CommandLineApplication/: CMakeLists.txt  EMSegmentAPIHelper.h  EMSegmentCommandLine.cxx  EMSegmentTclInterpreter.cxx  EMSegmentTransformToNewFormat.cxx
EMSegment/: vtkEMSegmentLogic.h  vtkEMSegmentWin32Header.h
EMSegment/Algorithm/: EMLocalShapeCostFunction.cxx  vtkImageEMGeneral.cxx  vtkImageEMGenericClass.h  vtkImageEMLocalSegmenter.cxx
EMSegment/CommandLineApplication/: CMakeLists.txt  EMSegmentCommandLine.xml  EMSegmentCommandLineFct.h
EMSegment/KWWidgets/: vtkEMSegmentGUI.cxx  vtkEMSegmentGUI.h  vtkEMSegmentInputChannelsStep.cxx  vtkEMSegmentIntensityDistributionsStep.cxx  vtkEMSegmentKWDynamicFrame.cxx  vtkEMSegmentKWLogic.h  vtkEMSegmentNodeParametersStep.cxx  vtkEMSegmentParametersSetStep.cxx  vtkEMSegmentPreProcessingStep.cxx  vtkEMSegmentRunSegmentationStep.cxx  vtkEMSegmentStep.cxx
EMSegment/KWWidgets/Graph/: vtkImageCurveRegion.cxx
EMSegment/MRML/: vtkMRMLEMSTemplateNode.cxx  vtkMRMLEMSTreeParametersLeafNode.h  vtkMRMLEMSTreeParametersNode.cxx  vtkMRMLEMSTreeParametersParentNode.cxx  vtkMRMLEMSTreeParametersParentNode.h  vtkMRMLEMSWorkingDataNode.cxx
EMSegment/Tasks/: MRI-Human-Brain-Exp.tcl  MRI-Human-Brain-Full-Parcellation.mrml  MRI-Human-Brain-HIPR.mrml  MRI-Human-Brain-Parcellation.tcl  Non-Human-Primate.tcl  Template.tcl  Test-Atlas-Cluster.mrml  vtkCTHandBoneClass.cxx
EMSegment/Tcl/: EMSegmentAutoSample.tcl  GenerateGraph.tcl
EMSegment/Testing/: test_atlas_creator.tcl  vtkEMSegmentCompareTest.cxx  vtkEMSegmentMRMLManagerTest.cxx  vtkEMSegmentRemoteIOTest.cxx
EMSegment/Testing/TestData/: DefaultMRMLNodes.mrml
KWWidgets/: CMakeLists.txt  vtkEMSegmentKWDynamicFrame.h  vtkEMSegmentKWLogic.cxx  vtkEMSegmentNodeParametersStep.cxx  vtkEMSegmentParametersSetStep.cxx  vtkEMSegmentRegistrationParametersStep.cxx  vtkEMSegmentRunSegmentationStep.cxx  vtkEMSegmentRunSegmentationStep.h
MRML/: vtkMRMLEMSCollectionNode.cxx  vtkMRMLEMSGlobalParametersNode.cxx  vtkMRMLEMSGlobalParametersNode.h  vtkMRMLEMSNode.cxx  vtkMRMLEMSSegmenterNode.cxx  vtkMRMLEMSTreeNode.cxx  vtkMRMLEMSTreeParametersLeafNode.cxx  vtkMRMLEMSTreeParametersParentNode.cxx  vtkMRMLEMSTreeParametersParentNode.h  vtkMRMLEMSVolumeCollectionNode.cxx
Qt/: CMakeLists.txt  qSlicerEMSegmentModule.cxx  qSlicerEMSegmentModuleWidget.cxx
Qt/Logic/: CMakeLists.txt  vtkEMSegmentLogic.cxx  vtkEMSegmentLogic.h
Qt/Resources/UI/: qSlicerEMSegmentDefineTaskStep.ui
Qt/Widgets/: qSlicerEMSegmentAnatomicalTreeWidget.cxx  qSlicerEMSegmentInputChannelListWidget.cxx
Qt/Workflow/: qSlicerEMSegmentDefineTaskStep.cxx  qSlicerEMSegmentSpecifyIntensityDistributionStep.cxx  qSlicerEMSegmentWorkflowWidgetStep.h
Tasks/: CT-Hand-Bone.mrml  CT-Hand-Bone.tcl  GenericTask.tcl  Human-Eye.mrml  MRI-Human-Brain-Exp.mrml  MRI-Human-Brain-Parcellation.mrml  MRI-Human-Brain.mrml  MRI-Human-Brain.tcl  Non-Human-Primate.mrml  Test-Atlas-Cluster.tcl  vtkCTHandBoneClass.h
Tasks/MRI-Human-Brain-Full-Parcellation/: atlas_air.nrrd  atlas_csf.nrrd
Testing/: CMakeLists.txt  vtkEMSegmentBlackBoxSegmentationTest.cxx  vtkEMSegmentPreprocessingManagerTest.cxx
Testing/TestData/: Human-Eye_LogMeanError.mrml
Testing/TestData/TutorialTest/: Template_small_normalizationOn_noImages.mrml
